--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/WeiseCreations/Twitter_Trends_Website#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "lokijs": "^1.5.1"
+    "lokijs": "^1.5.1",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
