--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/WeiseCreations/Twitter_Trends_Website#readme",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "lokijs": "^1.5.1",
     "twitter": "^1.7.1"
