--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
   },
   "homepage": "https://github.com/WeiseCreations/Twitter_Trends_Website#readme",
   "dependencies": {
-    "dotenv": "^4.0.0",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2",
-    "lokijs": "^1.5.1",
-    "twitter": "^1.7.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1"
+    "dotenv": "^2.0.0",
+    "ejs": "^2.5.1",
+    "express": "^4.14.0",
+    "lokijs": "^1.4.1",
+    "nodemon": "^1.10.2",
+    "twitter": "^1.4.0"
   }
 }
